# HandCommunication_ROS

./: README.md
L10/Finger_Test/L/: zhuawo.sh
src/CanCtrlHand/: .clang-format  CMakeLists.txt  package.xml
src/CanCtrlHand/include/: Can_Communication.h  GeneralFunction.h
src/CanCtrlHand/launch/: Can_Communication_Node.launch
src/CanCtrlHand/src/: Can_Communication.cpp  Can_Communication_Node.cpp
src/HandTCPCommunication/: CMakeLists.txt
src/HandTCPCommunication/include/: GeneralFunction.h  TCPCommunication_Hand.h
src/HandTCPCommunication/launch/: HandCtrl_node.launch
src/HandTCPCommunication/src/: HandCtrl_node.cpp  TCPCommunication_Hand.cpp
